--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <input type="text" id="input-box" placeholder="Add a new task...">
             <button>Add</button>
            </div>
+           <ul id="list-container">
+            <li>Task1</li>
+            <li>Task2</li>
+            <li>Task3</li>
+            
+           </ul>
+           
        </div>
 
     </div>
