--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <button>Add</button>
            </div>
            <ul id="list-container">
-            <li>Task1</li>
+            <li class="checked">Task1</li>
             <li>Task2</li>
             <li>Task3</li>
-            
+
            </ul>
            
        </div>
